[package]
name = "bitbucket-repo-puller"
version = "0.1.0"
authors = ["Steve Franchak <stevefranchak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = { version = "0.10.9", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
tokio = { version = "0.3.5", features = ["full"] }
tokio-compat-02 = "0.1.2"
